@@ -43,6 +43,8 @@
 #include "output-pstoedit.h"
 #endif /* HAVE_LIBPSTOEDIT */  
 
+#include <locale.h>
+
 #define AT_DEFAULT_DPI 72
 
 at_fitting_opts_type *
@@ -374,6 +376,8 @@ at_splines_write (at_output_write_func output_writer,
       new_opts = true;
       opts     = at_output_opts_new();
     }
+
+  setlocale( LC_NUMERIC, "C" );
 #if HAVE_LIBPSTOEDIT 
   if (output_pstoedit_is_writer(output_writer))
     output_pstoedit_invoke_writer (output_writer, 
@@ -389,6 +393,7 @@ at_splines_write (at_output_write_func output_writer,
   (*output_writer) (writeto, file_name, llx, lly, urx, ury, opts, *splines,
 		    msg_func, msg_data);
 #endif /* HAVE_LIBPSTOEDIT */  
+  setlocale( LC_NUMERIC, "" );
   if (new_opts)
     at_output_opts_free(opts);
 }
