@@ -1,3 +1,8 @@
+2002-12-18  Martin Weber <martweb@gmx.net>
+
+ 	* autotrace.c: fixed problem that , is used instead of . in ouput when
+	 using German locale.
+
 2002-12-19  Masatake YAMATO  <yamato@redhat.com>
 
 	* autotrace.c: Likewise.
